<resources>
    <string name="app_name">NanoFormula</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="posicion">Posicion</string>
    <string name="nombrePiloto">Nombre Piloto</string>
    <string name="nombreEquipo">Nombre Equipo</string>
    <string name="puntosPiloto">Puntos Piloto</string>
    <string name="fotoPiloto">Foto Piloto</string>
    <string name="toolbar">ToolBar</string>
    <string name="fotoEscuderia">Foto Escuderia</string>
    <string name="nombreEscuderia">Nombre Escuderia</string>
    <string name="nombrePilotos">Piloto 1 - Piloto 2</string>
    <string name="puntosConstructor">Puntos Piloto</string>
    <string name="nombreCarrera">Nombre Carrera\n</string>
    <string name="nombreCiudad">Ciudad - Pais</string>
    <string name="fechaCarrera">dd-mm-yy</string>
    <string name="nombreLocalizacion">Nombre Localizacion</string>
    <string name="nombre_piloto">Nombre del Piloto</string>
    <string name="nacionalidad_piloto">Nacionalidad del Piloto</string>
    <string name="numero_piloto">NÚMERO</string>
    <string name="codigo_piloto">CÓDIGO</string>
    <string name="edad_piloto">EDAD</string>
    <string name="puntosEscuderia">Puntos Escuderia</string>
    <string name="nacionalidadEscuderia">Nacionalidad Escudería</string>
    <string name="titulosEscudería">TÍTULOS</string>
    <string name="victoriasEscudería">VICTORIAS</string>
    <string name="puntosEscudería">PUNTOS</string>
    <string name="temporadasEscudería">TEMP.</string>
    <string name="estadisticasGenerales">ESTADÍSTICAS GENERALES</string>
    <string name="temporada">TEMPORADA 2023</string>
    <string name="posEscudería">POS</string>
    <string name="rondaEscudería">RONDA</string>
    <string name="fotoConstructor">Foto equipo</string>
    <string name="podiosPiloto">PODIOS</string>
    <string name="polesPiloto">POLES</string>
    <string name="temaporadasPiloto">TEMP.</string>
    <string name="vueltaRapida">VUELTA\n RAP.</string>
    <string name="puntosPilotototal">PUNTOS</string>
    <string name="mejorPosicion">MEJOR\nPOS</string>
    <string name="TemporadaActual">TEMPORADA ACTUAL</string>
    <string name="title_activity_carrera_details">CarreraDetails</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="fotoCircuito">Foto del Circuito</string>
    <string name="nombreCircuito">Nombre del circuito</string>
    <string name="localidadCircuito">LOCALIDAD</string>
    <string name="fecha_carrera">FECHA</string>
    <string name="hora_carrera">HORA</string>
    <string name="fotoPilotoGanador">Foto del piloto ganador</string>
    <string name="ganador_carrera">GANADOR</string>
    <string name="ResultadosCarrera">RESULTADOS DE CARRERA</string>
    <string name="polePiloto">POLE</string>
    <string name="vueltasCarrera">VUELTAS</string>
    <string name="tiempoGanador">TIEMPO</string>
    <string name="vueltaRapidaCarrera">VUELTA RÁP</string>
    <string name="posCarrera">POS</string>
    <string name="nombrePilotoCarrera">NOMBRE</string>
    <string name="nombreEscuderiaCarrera">ESCUDERIA</string>
    <string name="puntosCarreraPiloto">PTS</string>
    <string name="carrera_no_disponible">Los resultados de la carrera estarán disponibles el día posterior al que haya finalizado.</string>
    <string name="numeroEquipos">NUM.\nEQUIPOS</string>
    <string name="posicionPiloto">POS</string>
    <string name="pilotoEscudería">ESCUDERIA</string>
    <string name="graficoPuntosTemp">PUNTOS POR CARRERA</string>
    <string name="graficoPosSalidaFin">POSICIÓN SALIDA VS FINAL</string>
    <string name="CalendarioGP">CALENDARIO DE GP</string>
    <string name="siguienteCarrera">SIGUIENTE CARRERA</string>
    <string name="pilotos">PILOTOS</string>
    <string name="seleccionarPiloto">SELECCIONE 2 PILOTOS</string>
    <string name="seleccionarPiloto1">Primer Piloto</string>
    <string name="seleccionarPiloto2">Segundo Piloto</string>
    <string name="buttonComparar">Comparar Pilotos</string>
    <string name="comparativaPilotos">COMPARATIVA</string>
    <string name="estadisticasPiloto1">ESTADÍSTICAS PILOTO1</string>
    <string name="estadisticasPiloto2">ESTADÍSTICAS PILOTO2</string>
    <string name="seleccionarPiloto1Titulo">PRIMER PILOTO</string>
    <string name="seleccionarPiloto2Titulo">SEGUNDO PILOTO</string>
    <string name="tituloNombrePiloto">"Nombre: "</string>
    <string name="fechaNacimientoPiloto">Fecha de Nacimiento: </string>
    <string name="nacionalidadPiloto">"Nacionalidad: "</string>
    <string name="momentos_carrera">RESUMEN</string>
    <string name="export_csv">Exportar CSV</string>
    <string name="calendario_gp">Calendario GP</string>

</resources>