<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="16dp">


    <TextView
        android:id="@+id/posicionCarrera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:text="@string/posicion" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/fotoBandera"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/fotoConstructor"
        android:scaleType="centerCrop"
        app:srcCompat="@mipmap/ic_launcher" />


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nombreCarrera"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:text="@string/nombreCarrera"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


        <TextView
            android:id="@+id/nombreLocalizacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombreLocalizacion" />

        <TextView
            android:id="@+id/nombreCiudad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombreCiudad"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

    </LinearLayout>

    <TextView
        android:id="@+id/fechaCarrera"
        android:layout_width="21dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:text="@string/fechaCarrera" />

</LinearLayout>