<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="16dp">


    <TextView
        android:id="@+id/posicionEscuderia"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:text="@string/posicion" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/fotoEscuderia"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/fotoEscuderia"
        app:srcCompat="@mipmap/ic_launcher"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/roundedImageView" />


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nombreEscuderia"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/nombreEscuderia" />


        <TextView
            android:id="@+id/nombrePilotos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:text="@string/nombrePilotos" />

    </LinearLayout>

    <TextView
        android:id="@+id/puntosEscuderia"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:text="@string/puntosEscuderia" />

</LinearLayout>