<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".CarreraDetails"
    tools:showIn="@layout/activity_carrera_details"
    android:background="@drawable/fondo_degradado"
    android:layout_marginTop="50dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        android:gravity="center|top">


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ftPilotoCircuito"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/fotoCircuito"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/roundedImageView"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/txNombreCarrera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/nombreCarrera" />

        <TextView
            android:id="@+id/txNombreCircuito"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/nombreCircuito" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="20dp"
                >

                <TextView
                    android:id="@+id/txTituloLocalidad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/localidadCircuito"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/txLocalidad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="TextView" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginRight="60dp">

                <TextView
                    android:id="@+id/txTituloFecha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/fecha_carrera"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/txFecha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="TextView" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginRight="20dp">

                <TextView
                    android:id="@+id/txTituloHora"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/hora_carrera"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/txHora"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="TextView" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/txTemporada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:drawableLeft="@drawable/linea"
            android:drawableRight="@drawable/linea"
            android:gravity="center"
            android:text="@string/TemporadaActual"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|top"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp">


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ftPilotoGanador"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/fotoPilotoGanador"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/roundedImageView"
                app:srcCompat="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/txGanador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:text="@string/ganador_carrera" />

            <TextView
                android:id="@+id/txNombreGanador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:text="TextView" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txTituloPole"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/polePiloto"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/txTemporadasPiloto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="-" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txTituloVueltaRapidaPiloto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vueltaRapidaCarrera"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/txVueltaRapidaPiloto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="-" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txTituloVueltasCarrera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vueltasCarrera"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/txPuntosPilotoTotal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="-" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txTituloTiempoGanador"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tiempoGanador"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/txMejorPosicionPiloto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="-" />
            </LinearLayout>
        </LinearLayout>


        <TextView
            android:id="@+id/txResultados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:drawableLeft="@drawable/linea"
            android:drawableRight="@drawable/linea"
            android:gravity="center"
            android:text="@string/ResultadosCarrera"
            android:textColor="@color/white" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/txPosCarrera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/posCarrera" />

                <TextView
                    android:id="@+id/txNombrePiloto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nombrePilotoCarrera" />

                <TextView
                    android:id="@+id/txNombreEscuderiaCarrera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nombreEscuderiaCarrera" />

                <TextView
                    android:id="@+id/txPuntosCarrera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/puntosCarreraPiloto" />

                <TextView
                    android:id="@+id/txTiempoPilotoCarrera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tiempoGanador" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>