<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".PilotoDetails"
    tools:showIn="@layout/activity_piloto_details"
    android:background="@drawable/fondo_degradado">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        android:gravity="center|top">

        <TextView
            android:id="@+id/txNombrePiloto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre_piloto"
            android:layout_marginBottom="20dp"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ftPiloto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/fotoPiloto"
            app:srcCompat="@mipmap/ic_launcher"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/roundedImageView" />

        <TextView
            android:id="@+id/txNacionalidadPiloto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/nacionalidad_piloto"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="20dp"
                >

                <TextView
                    android:id="@+id/txTituloNumero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/numero_piloto" />

                <TextView
                    android:id="@+id/txNumero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginRight="60dp">

                <TextView
                    android:id="@+id/txTituloCodigo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/codigo_piloto" />

                <TextView
                    android:id="@+id/txCodigo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginRight="20dp">

                <TextView
                    android:id="@+id/txTituloEdad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edad_piloto" />

                <TextView
                    android:id="@+id/txEdad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:gravity="center"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>